# codeyak

./: .env.example  .gitignore  LANGFUSE.md  README.md  TODO.md  pyproject.toml
.claude/skills/codeyak/scripts/: run_review.py  show_trends.py
.codeyak/: project.yaml
src/code-reviewer/: __init__.py  __main__.py
src/code-reviewer/core/: engine.py  grouping.py  models.py  prompts.py
src/code_reviewer/: __main__.py  config.py
src/code_reviewer/adapters/llm/: azure.py
src/code_reviewer/adapters/vcs/: gitlab.py
src/code_reviewer/core/: engine.py  exceptions.py  models.py  ports.py
src/code_reviewer/core/guidelines/: __init__.py  exceptions.py  (+1 more)
src/code_reviewer/guidelines/: readability.yaml  security.yaml
src/codeyak/: __init__.py  __main__.py  config.py
src/codeyak/core/: engine.py  exceptions.py  grouping.py  models.py  ports.py  prompts.py
src/codeyak/domain/: __init__.py  models.py
src/codeyak/guidelines/: code-quality.yaml  default.yaml  maintainability.yaml  readability.yaml  security.yaml
src/codeyak/infrastructure/: __init__.py
src/codeyak/prebuilt/: bugs.yaml  code-quality.yaml  default.yaml
src/codeyak/protocols/: __init__.py
src/codeyak/services/: __init__.py  code.py  context.py  context_builder.py  feedback.py  reviewer.py  summary.py
src/codeyak/ui/: __init__.py  console.py  progress.py  stderr_console.py
tests/: __init__.py  conftest.py  test_gitlab_get_file_content.py
tests/adapters/vcs/: test_gitlab.py
tests/core/: test_engine.py
tests/guidelines/: __init__.py  test_manager.py  test_parser.py
tests/guidelines/data/: bad-syntax.yaml  circular-a.yaml  circular-b.yaml  duplicate-labels.yaml  missing-label.yaml  short-description.yaml  simple.yaml  with-includes.yaml
(+26 files in other folders)
